// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe fvMZUS"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER gKloHQ"
      />
      <div
        class="sc-gKPRtg fdqAzt"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe bvPmMp"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER heCVYM"
      />
      <div
        class="sc-gKPRtg glUsyk"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP bwQUxR"
    disabled=""
  >
    <div
      class="sc-eDvSVe bvPmMp"
    >
      <input
        class="sc-iBYQkv jgRTsF"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="sc-jSUZER dmuXTk"
        disabled=""
      />
      <div
        class="sc-gKPRtg WOArv"
        disabled=""
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
